# Minerust

./: .gitignore  Cargo.toml  DEVELOPMENT.md  FOLDER_STRUCTURE.md  README.md  SECURITY.md  errors.txt  errors2.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: rust.yml
src/: constants.rs  lib.rs  main.rs  save.rs
src/app/: game.rs  init.rs  input.rs  mod.rs  render.rs  resize.rs  server.rs  state.rs  texture_cache.rs  update.rs
src/commands/: command.rs  command_list.json
src/core/: biome.rs  block.rs  chunk.rs  game_item.rs  mod.rs  uniforms.rs  vertex.rs
src/core/mobs/: mob.rs  mobs_registry.rs  mod.rs  villager.rs  zombie.rs
src/core/mobs/ai/: mod.rs
src/logger/: logger.rs  mod.rs
src/minerust_data/: data.rs
src/multiplayer/: client.rs  mod.rs  network.rs  player.rs  protocol.rs  server.rs  tcp.rs  transport.rs
src/player/: README.md  camera.rs  mod.rs  player_stats.rs
src/player/inventory/: inventory.rs
src/render/: README.md  atlas_map.rs  frustum.rs  indirect.rs  mesh.rs  mesh_loader.rs  mod.rs  texture.rs
src/render_core/: csm.rs
src/shader_utils/: mod.rs  workgroup_optimizer.rs
src/shaders/: cull.wgsl  depth_resolve.wgsl  hiz.wgsl  outline.wgsl  shadow.wgsl  sky.wgsl  sun.wgsl  terrain.wgsl  ui.wgsl  water.wgsl
src/ui/: menu.rs  mod.rs  toolbar.rs  ui.rs
src/utils/: README.md  gpu_memory_info.rs  settings.rs  settings_deafult.yaml
src/utils/settings/: load_settings.rs
src/world/: device_info.rs  generator.rs  loader.rs  mod.rs  spline.rs  terrain.rs
src/world/structures/: house.rs
