[package]
name = "minerust"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
wgpu = "28.0.0"
winit = "0.29"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
glyphon = "0.10"
image = "0.25"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
clap = { version = "4.4", features = ["derive"] }
fastnoise-lite = "1.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
once_cell = "1.21.3"

