[package]
name = "minerust"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
directories = "6.0.0"
wgpu = "28.0.0"
winit = "0.29"
inventory = "0.3.22"
pollster = "0.4"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
chrono = "0.4.44"
glyphon = "0.10"
image = "0.25.10"
sysinfo = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
clap = { version = "4.4", features = ["derive"] }
fastnoise-lite = "1.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
num_cpus = "1.16"
once_cell = "1.21.4"
lazy_static = "1.5.0"
rand = "0.10.0"

